# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: bits.h  executor.c  executor.h  instruction.h  instruction_decoding.c  instruction_decoding.h  instruction_execution.c  instruction_execution.h  main.c  memory.c  memory.h  state.c  state.h
tests/task3/: loop.c  loop.s  recursive.c  recursive.s
tests/task4/: t12.c  t13.c
